--- a/default.css
+++ b/default.css
@@ -1,362 +1,385 @@
-:root{
-    --mainColor: #eaeaea;
-    --secondaryColor: #fff;
-    --borderColor: #c1c1c1;
-    --mainText: black;
-    --secondaryText: #4b5156;
-    --themeDotBorder: #24292e;
-    --previewBg: rgb(251, 249, 243, 0.8);
-    --previewShadow: #f7e6ae;
-    --buttonColor: black;
+:root {
+  --mainColor: #eaeaea;
+  --secondaryColor: #fff;
+  --borderColor: #c1c1c1;
+  --mainText: black;
+  --secondaryText: #4b5156;
+  --themeDotBorder: #24292e;
+  --previewBg: rgb(251, 249, 243, 0.8);
+  --previewShadow: #f7e6ae;
+  --buttonColor: black;
 }
 
-html, body{
-    padding: 0;
-    margin: 0;
+html,
+body {
+  padding: 0;
+  margin: 0;
 }
 
-body *{
-    transition: 0.3s;
+body * {
+  transition: 0.3s;
 }
-h1, h2, h3, h4, h5, h6, strong{
-    color: var(--mainText);
-    font-family: 'Russo One', sans-serif;
-    font-weight: 500;
-}
-
-p, li, span, label, input, textarea, a{
-    color: var(--secondaryText);
-    font-family: 'Roboto Mono', monospace;
-}
-
-a{
-    text-decoration: none;
-    color: #17a2b8;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+  color: var(--mainText);
+  font-family: "Russo One", sans-serif;
+  font-weight: 500;
 }
 
-ul{
-    list-style: none;
+p,
+li,
+span,
+label,
+input,
+textarea,
+a {
+  color: var(--secondaryText);
+  font-family: "Roboto Mono", monospace;
 }
 
-h1 { font-size: 56px; }
-h2 { font-size: 36px; }
-h3 { font-size: 28px; }
-h4 { font-size: 24px; }
-h5 { font-size: 20px; }
-h6 { font-size: 16px; }
-
-.s1{
-    background-color: var(--mainColor);
-    border-bottom: 1px solid var(--borderColor);
-    overflow: auto;
+a {
+  text-decoration: none;
+  color: #17a2b8;
 }
 
-.s2{
-    background-color: var(--secondaryColor);
-    border-bottom: 1px solid var(--borderColor);
-    overflow: auto;
+ul {
+  list-style: none;
 }
 
-.main-container{
-    width: 1200px;
-    margin: 0 auto;
+h1 {
+  font-size: 56px;
+}
+h2 {
+  font-size: 36px;
+}
+h3 {
+  font-size: 28px;
+}
+h4 {
+  font-size: 24px;
+}
+h5 {
+  font-size: 20px;
+}
+h6 {
+  font-size: 16px;
 }
 
-.greeting-wrapper{
-    display: grid;
-    text-align: center;
-    align-content: center;
-    min-height: 10em;
+.s1 {
+  background-color: var(--mainColor);
+  border-bottom: 1px solid var(--borderColor);
+  overflow: auto;
 }
 
-.intro-wrapper{
-    background-color: var(--secondaryColor);
-    border: 1px solid var(--borderColor);
-    border-radius: 5px 5px 0 0;
-    --webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    --moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3em 30em;
-    grid-template-areas: 
-        'nav-wrapper nav-wrapper'
-        'left-column right-column'
-    ;
+.s2 {
+  background-color: var(--secondaryColor);
+  border-bottom: 1px solid var(--borderColor);
+  overflow: auto;
 }
 
-.nav-wrapper{
-    grid-area: nav-wrapper;
-    border-bottom: 1px solid var(--borderColor);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--mainColor);
-    border-radius: 5px 5px 0 0;
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
 }
 
-#navigation a{
-    color: var(--mainText);
+.greeting-wrapper {
+  display: grid;
+  text-align: center;
+  align-content: center;
+  min-height: 10em;
 }
 
-#navigation{
-    margin: 0;
-    padding: 10px;
+.intro-wrapper {
+  background-color: var(--secondaryColor);
+  border: 1px solid var(--borderColor);
+  border-radius: 5px 5px 0 0;
+  --webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  --moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3em 30em;
+  grid-template-areas:
+    "nav-wrapper nav-wrapper"
+    "left-column right-column";
 }
 
-#navigation li{
-    display: inline-block;
-    margin-right: 5px;
-    margin-left: 5px;
+.nav-wrapper {
+  grid-area: nav-wrapper;
+  border-bottom: 1px solid var(--borderColor);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--mainColor);
+  border-radius: 5px 5px 0 0;
 }
 
-.dots-wrapper{
-    display: flex;
-    padding: 10px;
+#navigation a {
+  color: var(--mainText);
 }
 
-#dot-1{
-    background-color: #FC6058;
+#navigation {
+  margin: 0;
+  padding: 10px;
 }
 
-#dot-2{
-    background-color: #FEC02F;
+#navigation li {
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
-#dot-3{
-    background-color: #2ACA3E;
+.dots-wrapper {
+  display: flex;
+  padding: 10px;
 }
 
-.browser-dot{
-    background-color: black;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    margin: 5px;
-    --webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    --moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+#dot-1 {
+  background-color: #fc6058;
 }
 
-.left-column{
-    grid-area: left-column;
-    padding-top: 50px;
-    padding-bottom: 50px;
+#dot-2 {
+  background-color: #fec02f;
 }
 
-#profile_pic{
-    display: block;
-    margin: 0 auto;
-    height: 200px;
-    width: 200px;
-    object-fit: cover;
-    border: 2px solid var(--borderColor);
+#dot-3 {
+  background-color: #2aca3e;
 }
 
-#theme-options-wrapper{
-    display: flex;
+.browser-dot {
+  background-color: black;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin: 5px;
+  --webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  --moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+}
+
+.left-column {
+  grid-area: left-column;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#profile_pic {
+  display: block;
+  margin: 0 auto;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+  border: 2px solid var(--borderColor);
+}
+
+#theme-options-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.theme-dot {
+  height: 30px;
+  width: 30px;
+  background-color: black;
+  margin: 5px;
+  border: 2px solid var(--themeDotBorder);
+  border-radius: 50%;
+  --webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  --moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+}
+
+.theme-dot:hover {
+  border-width: 5px;
+}
+
+#light-mode {
+  background-color: #fff;
+}
+
+#blue-mode {
+  background-color: #192734;
+}
+
+#green-mode {
+  background-color: #78866b;
+}
+
+#purple-mode {
+  background-color: #7e4c74;
+}
+
+#settings-note {
+  font-size: 12px;
+  font-style: italic;
+  text-align: center;
+}
+
+.right-column {
+  grid-area: right-column;
+  display: grid;
+  align-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#preview-shadow {
+  background-color: var(--previewShadow);
+  width: 300px;
+  height: 180px;
+  padding-left: 30px;
+  padding-top: 30px;
+}
+
+#preview {
+  width: 300px;
+  border: 1.5px solid #17a2b8;
+  background-color: var(--previewBg);
+  padding: 15px;
+  position: relative;
+}
+
+.corner {
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  border: 1.5px solid #17a2b8;
+  background-color: #fff;
+  position: absolute;
+}
+
+#corner-tl {
+  top: -5px;
+  left: -5px;
+}
+
+#corner-tr {
+  top: -5px;
+  right: -5px;
+}
+
+#corner-br {
+  bottom: -5px;
+  right: -5px;
+}
+
+#corner-bl {
+  bottom: -5px;
+  left: -5px;
+}
+
+.about-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  padding-top: 50px;
+  padding-bottom: 50px;
+  gap: 100px;
+}
+
+#skills {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: var(--previewShadow);
+}
+
+.social-links {
+  display: grid;
+  align-content: center;
+  text-align: center;
+}
+
+.post-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 320px);
+  gap: 20px;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+
+.post {
+  border: 1px solid var(--borderColor);
+  --webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  --moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+}
+
+.thumbnail {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+.post-preview {
+  background-color: #fff;
+  padding: 15px;
+}
+
+.post-title {
+  color: black;
+}
+
+.post-intro {
+  color: #4b5156;
+  font-size: 14px;
+}
+
+#contact-form {
+  display: block;
+  max-width: 600px;
+  margin: 0 auto;
+  border: 1px solid var(--borderColor);
+  padding: 15px;
+  border-radius: 5px;
+  background-color: var(--mainColor);
+  margin-bottom: 50px;
+}
+
+#contact-form label {
+  line-height: 2.7em;
+}
+
+.input-field {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: var(--secondaryColor);
+  border-radius: 5px;
+  border: 1px solid var(--borderColor);
+  font-size: 14px;
+}
+
+#submit-btn {
+  margin-top: 10px;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  background-color: var(--buttonColor);
+  border: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .main-container {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .intro-wrapper {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "nav-wrapper"
+      "left-column"
+      "right-column";
+  }
+  .right-column {
     justify-content: center;
-}
-
-.theme-dot{
-    height: 30px;
-    width: 30px;
-    background-color: black;
-    margin: 5px;
-    border: 2px solid var(--themeDotBorder);
-    border-radius: 50%;
-    --webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    --moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    cursor: pointer;
-}
-
-.theme-dot:hover{
-    border-width: 5px;
-}
-
-#light-mode{
-    background-color: #fff;
-}
-
-#blue-mode{
-    background-color: #192734;
-}
-
-#green-mode{
-    background-color: #78866b;
-}
-
-#purple-mode{
-    background-color: #7E4C74;
-}
-
-#settings-note{
-    font-size: 12px;
-    font-style: italic;
-    text-align: center;
-}
-
-.right-column{
-    grid-area: right-column;
-    display: grid;
-    align-content: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-#preview-shadow{
-    background-color: var(--previewShadow);
-    width: 300px;
-    height: 180px;
-    padding-left: 30px;
-    padding-top: 30px;
-}
-
-#preview{
-    width: 300px;
-    border: 1.5px solid #17a2b8;
-    background-color: var(--previewBg);
-    padding: 15px;
-    position: relative;
-}
-
-.corner{
-    width: 7px;
-    height: 7px;
-    border-radius: 50%;
-    border: 1.5px solid #17a2b8;
-    background-color: #fff;
-    position: absolute;
-}
-
-#corner-tl{
-    top: -5px;
-    left: -5px;
-}
-
-#corner-tr{
-    top: -5px;
-    right: -5px;
-}
-
-#corner-br{
-    bottom: -5px;
-    right: -5px;
-}
-
-#corner-bl{
-    bottom: -5px;
-    left: -5px;
-}
-
-.about-wrapper{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    padding-top: 50px;
-    padding-bottom: 50px;
-    gap: 100px;
-}
-
-#skills{
-    display: flex;
-    justify-content: space-evenly;
-    background-color: var(--previewShadow);
-}
-
-.social-links{
-    display: grid;
-    align-content: center;
-    text-align: center;
-}
-
-.post-wrapper{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 320px);
-    gap: 20px;
-    justify-content: center;
-    padding-bottom: 50px;
-}
-
-.post{
-    border: 1px solid var(--borderColor);
-    --webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    --moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-}
-
-.thumbnail{
-    width: 100%;
-    height: auto;
-    display: block;
-    object-fit: cover;
-}
-
-.post-preview{
-    background-color: #fff;
-    padding: 15px;
-}
-
-.post-title{
-    color: black;
-}
-
-.post-intro{
-    color: #4b5156;
-    font-size: 14px;
-}
-
-#contact-form{
-    display: block;
-    max-width: 600px;
-    margin: 0 auto;
-    border: 1px solid var(--borderColor);
-    padding: 15px;
-    border-radius: 5px;
-    background-color: var(--mainColor);
-    margin-bottom: 50px;
-}
-
-#contact-form label{
-    line-height: 2.7em;
-}
-
-.input-field{
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: var(--secondaryColor);
-    border-radius: 5px;
-    border: 1px solid var(--borderColor);
-    font-size: 14px;
-}
-
-#submit-btn{
-    margin-top: 10px;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: #fff;
-    background-color: var(--buttonColor);
-    border: none;
-}
-
-@media screen and (max-width: 1200px){
-    .main-container{
-        width: 95%;
-    }
-}
-
-@media screen and (max-width: 800px){
-    .intro-wrapper{
-        grid-template-columns: 1fr;
-        grid-template-areas: 
-            'nav-wrapper'
-            'left-column'
-            'right-column'
-        ;
-    }
-    .right-column{
-        justify-content: center;
-    }
+  }
 }
